2009-10-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.6.3
	* configure.ac

2009-10-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed Util.cc from POTFILES.in
	* po/POTFILES.in

2009-10-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page for previous change.
	* doc/aria2c.1.txt

2009-10-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	If user name is embedded but password is missing in URI, first
	resolve password using .netrc. If password is found in .netrc,
	then use it as password. If not, use the password specified in
	--ftp-passwd.
	* src/AuthConfigFactory.cc
	* src/Request.cc
	* src/Request.h
	* test/AuthConfigFactoryTest.cc

2009-10-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* doc/aria2c.1.txt

2009-10-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* src/usage_text.h

2009-10-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing bitfield.cc
	* src/bitfield.cc

2009-10-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed Util.{cc,h} as util.{cc,h}
	* src/Util.cc
	* src/Util.h
	* src/util.cc
	* src/util.h

2009-10-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Moved static functions in Util class to namespace util.
	* src
	* test

2009-10-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Moved generateRandomData to Util.cc Moved flipBit to bitfield.cc.
	Moved generateRandomKey to bittorrent_helper.cc.
	* src/DHTBucket.cc
	* src/DHTGetPeersMessage.cc
	* src/DHTGetPeersReplyMessage.cc
	* src/DHTMessage.cc
	* src/DHTNode.cc
	* src/DHTTokenTracker.cc
	* src/DHTUtil.cc: Removed.
	* src/DHTUtil.h: Removed.
	* src/Makefile.am
	* src/Util.cc
	* src/Util.h
	* src/bitfield.h
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* test/ARC4Test.cc
	* test/BNodeTest.cc
	* test/DHTAnnouncePeerMessageTest.cc