@@ -1,3 +1,13 @@
+2009-10-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed the bug that when downloading more than one torrent,
+	listening port is not reported properly to tracker for 2nd or
+	later torrents.
+	* src/BtSetup.cc
+	* src/PeerListenCommand.cc
+	* src/PeerListenCommand.h
+	* src/RequestGroup.cc
+
 2009-10-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Bump up version number to 1.6.3
